# simple-mcp-client

./: .gitignore  README.md  client.py  example-server.py  pyproject.toml
