[project]
name = "simple-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastmcp>=2.9.0",
    "litellm>=1.73.0",
    "llama-index>=0.12.43",
    "llama-index-core>=0.12.43",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-google-genai>=0.2.2",
    "llama-index-readers-file>=0.4.9",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0",
]
