[project]
name = "simple-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastmcp>=2.9.0",
    "litellm>=1.73.0",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0",
]
